preset: Fix banners in Course
The banners look broken, so make it look like
the real apps using this preset/theme.

https://phabricator.endlessm.com/T22162

--- a/data/css/course.scss
+++ b/data/css/course.scss
@@ -106,9 +106,9 @@ $display-font: 'Raleway Black' !default;
     &__title {
       font-size: 48px;
       font-family: $display-font;
-      margin: 90px 0;
+      margin: 80px 0px 55px 0px;
+      color: white;
     }
-    padding: 0px 20px 20px 20px;
   }
 
   .ArrangementList {
